--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -241,7 +241,7 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 20vh;
+  height: 25vh;
   background: url("../img/hero-bg.jpg") top right no-repeat;
   background-size: cover;
   position: relative;
@@ -265,7 +265,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 64px;
   font-weight: 700;
   line-height: 56px;
-  color: #45505b;
+  color: #ffffff;
 }
 #hero p {
   color: #45505b;
