--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,9 +134,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 @media (min-width: 992px) {
-  #main {
+  /* #main {
     margin-left: 100px;
-  }
+  } */
 }
 /*--------------------------------------------------------------
 # Navigation Menu
