--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,6 +57,13 @@ h1, h2, h3, h4, h5, h6 {
   opacity: 1;
 }
 
+h1 {
+  font-size: 72px;
+  background: -webkit-linear-gradient( #fff,#6DD5FA);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
 /*--------------------------------------------------------------
 # Preloader
 --------------------------------------------------------------*/
