--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ a:hover {
   text-decoration: none;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5 {
   font-family: "Raleway", sans-serif;
 }
 
@@ -727,6 +727,15 @@ section {
 .services .icon-box .icon svg path {
   transition: 0.5s;
   fill: #f5f5f5;
+}
+.services .icon-box h3 {
+  font-weight: 600;
+  margin: 10px 0 15px 0;
+  font-size: 24px;
+}
+.services .icon-box h3 a {
+  color: #45505b;
+  transition: ease-in-out 0.3s;
 }
 .services .icon-box h4 {
   font-weight: 600;
